syntax = "proto3";
package ET;


//ResponseType A2M_GMReload
message M2A_GMReload // IRequest
{
	int32 RpcId = 90;
}

message A2M_GMReload // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

//ResponseType G2W_GMShutDown
message W2G_GMShutDown // IRequest
{
	int32 RpcId = 90;
}

message G2W_GMShutDown // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

//ResponseType W2G_GMGetProcessInfo
message G2W_GMGetProcessInfo // IRequest
{
	int32 RpcId = 90;
}

message W2G_GMGetProcessInfo // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

//ResponseType G2W_GMGetProcessEntityInfo
message W2G_GMGetProcessEntityInfo // IRequest
{
	int32 RpcId = 90;
}

message G2W_GMGetProcessEntityInfo // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

//ResponseType A2M_GMProcessEdit
message M2A_GMProcessEdit // IRequest
{
	int32 RpcId = 90;
	int32 ProcessId = 91;
	// 0 reload 1 ReStart 2 Start 3 ShutDown
	int32 OperateType = 92;
}

message A2M_GMProcessEdit // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

//ResponseType A2M_GMAddNewNotice
message M2A_GMAddNewNotice // IRequest
{
	int32 RpcId = 90;
	string NOTICE = 92;
  	int32 OperateTime = 94;
}

message A2M_GMAddNewNotice // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

//ResponseType A2M_GMAddNewServerZone
message M2A_GMAddNewServerZone // IRequest
{
	int32 RpcId = 90;
	int32 ZoneId = 91;
  	string ServerName = 92;
  	int32 ServerLabel = 93;
  	int32 OperateTime = 94;
}

message A2M_GMAddNewServerZone // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

//ResponseType A2M_GMEditServerZone
message M2A_GMEditServerZone // IRequest
{
	int32 RpcId = 90;
	int32 State = 91;
  	int64 ServerId = 92;
  	int32 OperateType = 93; // 0update 1start 2stop
  	int32 OperateTime = 94;
  	int32 ServerLabel = 95;
  	string ServerName = 96;
}

message A2M_GMEditServerZone // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}